# goodfellow

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
hooks/: hooks.json
knowledge/: principles-web.md  principles.md
scripts/: codex-bridge.sh  convergence.py  convergence_detector.py  dedup_principles.py  egress_denylist.txt  init_state.sh  loop_store.py  memory_config.py  memory_index.py  principles_context.py  recall_pointer.py  research.sh  research_tavily.py  run_log.sh  test_backend_dispatch.py  test_convergence.py  test_dedup_principles.py  test_loop_store.py  test_memory_config.py  test_memory_index.py  test_memory_migrate.py  test_memory_store.py  test_principles_context.py  test_recall_pointer.py  test_research_tavily.py  test_run_log.py  test_seed_egress.py  test_seed_principles.py  test_skill_principles_wiring.py  test_triage_helper.py  triage_helper.py
skills/brainstorm/: SKILL.md
skills/branch/: SKILL.md
skills/close/: SKILL.md
skills/codex-review/: SKILL.md
skills/execute/: SKILL.md
skills/plan/: SKILL.md
skills/plan-review/: SKILL.md
skills/prune-stale/: SKILL.md
skills/ship/: SKILL.md
skills/snap-compact/: SKILL.md
skills/spec-review/: SKILL.md
skills/triage/: SKILL.md
