[project]
name = "goodfellow"
version = "0.1.0"
description = "Named after the inventor of adversarial networks. Your good fellow for shipping code."
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["scripts"]
